src/components/data-table-v2/_data-table-v2-core.scss
@import '../../globals/scss/css--typography';
@import '../../globals/scss/import-once';
@import '../../globals/scss/vars';
@import '../../globals/scss/theme';

@mixin data-table-v2-core {
  .#{$prefix}--data-table-v2-container {
    width: 100%;
    min-width: rem(500px);
    overflow-x: auto;
    padding-top: $spacing-3xs; // allow space for focus styles
  }

  .#{$prefix}--data-table-v2 {
    border-collapse: collapse;
    border-spacing: 0;
    width: 100%;
    border-bottom: 1px solid $ui-03;

    thead {
      @include typescale('zeta');
      background-color: $ui-02;
      font-weight: 700;
      border-right: 1px solid $ui-03;
    }

    tbody {
      @include typescale('zeta');
      background-color: $ui-01;
      border-right: 1px solid $ui-03;
    }

    tr {
      height: rem(48px);

      &:hover {
        td {
          background-color: rgba($brand-02, 0.1);
          border-top: 1px solid $brand-01;
          border-bottom: 1px solid $brand-01;

          &:first-of-type {
            border-left: 1px solid $brand-01;
          }

          &:last-of-type {
            border-right: 1px solid $brand-01;
          }
        }

        .#{$prefix}--overflow-menu {
          opacity: 1;
        }
      }
    }

    th {
      border-top: 1px solid $ui-03;
    }

    th,
    td {
      @include typescale('zeta');
      border-top: 1px solid $ui-03;
      padding-left: $spacing-sm;
      vertical-align: middle;
      text-align: left;
      color: $text-01;

      &:first-of-type {
        padding-left: rem(24px);
        border-left: 1px solid $ui-03;
      }

      &:last-of-type {
        padding-right: $spacing-lg;
      }
    }

    // Overrrides
    .#{$prefix}--checkbox-label {
      padding-left: rem(28px);
    }

    .#{$prefix}--overflow-menu {
      opacity: 0;

      &:focus {
        outline: 0;
        opacity: 1;
        box-shadow: none;

        .#{$prefix}--overflow-menu__icon {
          box-shadow: inset 0px 0px 0px 1px $brand-01;
        }
      }
    }

    .#{$prefix}--overflow-menu__icon {
      transform: rotate(90deg);
    }
  }

  // Options

  .#{$prefix}--data-table-v2-header {
    margin-bottom: $spacing-xs;
    color: $text-01;
  }

  .#{$prefix}--data-table-v2--zebra {
    tbody tr:nth-child(even) {
      background-color: $ui-02;
    }
  }

  .#{$prefix}--data-table-v2--no-border {
    & {
      border-bottom-color: transparent;
    }

    thead,
    tbody {
      border-right-color: transparent;
    }

    th,
    td {
      &:first-of-type {
        border-left-color: transparent;
      }
    }
  }

  .#{$prefix}--data-table-v2--compact {
    tbody tr {
      height: rem(24px);
    }
  }

  .#{$prefix}--data-table-v2--short {
    tbody tr {
      height: rem(32px);
    }
  }

  .#{$prefix}--data-table-v2--tall {
    tbody tr {
      height: rem(64px);
    }
  }

  .#{$prefix}--data-table-v2--static {
    width: auto;
  }

  .#{$prefix}--data-table-v2--zebra tbody tr.#{$prefix}--data-table-v2--selected,
  tbody tr.#{$prefix}--data-table-v2--selected {
    background-color: rgba($brand-02, 0.1);
  }
}

@mixin data-table-v2-core--x {
  .#{$prefix}--data-table-v2-container {
    min-width: rem(500px);
    padding-top: $spacing-3xs; // allow space for focus styles
  }

  .#{$prefix}--data-table-v2_inner-container {
    min-width: rem(500px);
    overflow-x: scroll;
  }

  .#{$prefix}--data-table-v2 {
    border-collapse: collapse;
    border-spacing: 0;
    width: 100%;

    thead {
      @include typescale('zeta');
      background-color: $ui-03;
      font-weight: 700;
    }

    th:hover {
      background: $data-table-column-hover;
      outline: 1px solid $data-table-column-hover-border;
      outline-offset: -1px;
    }

    tbody {
      @include typescale('zeta');
      background-color: $ui-01;
      border-bottom: 1px solid $ui-03;
      width: 100%;

      & > tr {
        background: $ui-01;
        border-bottom: 1px solid $ui-03;

        &:hover {
          background: $hover-field;
        }
      }
    }

    tr {
      height: rem(48px);
      width: 100%;

      .#{$prefix}--overflow-menu {
        opacity: 1;
      }
    }
  }

  th,
  td {
    @include typescale('zeta');
    border-top: 1px solid $ui-03;
    padding-left: $spacing-sm;
    vertical-align: middle;
    text-align: left;
    color: $text-01;

    &:first-of-type {
      padding-left: $spacing-lg;
    }

    &:last-of-type:not(.#{$prefix}--table-column-menu) {
      padding-right: $spacing-lg;
    }
  }

  //min width for all columns that aren't actions
  td:not(.#{$prefix}--table-expand-v2):not(.#{$prefix}--table-column-checkbox):not(.#{$prefix}--table-column-menu) {
    min-width: rem(100px);
  }

  //min width for checkbox columns
  .#{$prefix}--table-column-checkbox {
    width: rem(64px);
    min-width: rem(64px);
  }

  //min width for overflow menu columns
  .#{$prefix}--table-column-menu {
    width: rem(56px);
    min-width: rem(56px);
    padding-right: 0;
  }

  .#{$prefix}--table-column-menu .#{$prefix}--overflow-menu[aria-expanded='false']:hover {
    background: $ui-03;
  }

  // Overrides
  .#{$prefix}--checkbox-label {
    padding-left: rem(28px);
  }

  .#{$prefix}--overflow-menu {
    &:focus {
      outline: 0;
      opacity: 1;
      box-shadow: none;
    }
  }

  // Options
  .#{$prefix}--data-table-v2-header {
    background: $ui-01;
    height: rem(88px);
    color: $text-01;
    @include font-size('20');
    font-weight: 400;
    padding: 22px 0 0 $spacing-md;
    position: relative;
    top: rem(21px);
  }

  .#{$prefix}--data-table-v2-optional {
    position: relative;
    left: rem(17px);
    top: rem(-20px);
    @include font-size('14');
    color: $text-02;
  }

  .#{$prefix}--data-table-v2--zebra {
    tbody tr:nth-child(even) {
      background-color: $data-table-zebra-color;
      border: 1px solid transparent;
    }

    tbody tr:nth-child(even):hover {
      background-color: $hover-field;
    }
  }

  .#{$prefix}--data-table-v2--no-border {
    &,
    thead,
    tbody,
    tr,
    th,
    td {
      border: 1px solid transparent;
    }
  }

  .#{$prefix}--data-table-v2--compact {
    tbody tr {
      height: rem(24px);
    }
  }

  .#{$prefix}--data-table-v2--short {
    tbody tr {
      height: rem(32px);
    }
  }

  .#{$prefix}--data-table-v2--tall {
    tbody tr {
      height: rem(64px);
    }
  }

  .#{$prefix}--data-table-v2--static {
    width: auto;
  }

  .#{$prefix}--data-table-v2--zebra tbody tr.#{$prefix}--data-table-v2--selected,
  tbody tr.#{$prefix}--data-table-v2--selected {
    background-color: $ui-03;
    border-bottom: 1px solid $active-01;

    &:first-of-type {
      border-bottom: 1px solid $active-01;
      border-top: 1px solid $active-01;
    }

    &:last-of-type {
      border-bottom: 1px solid transparent;
    }

    &:hover {
      background: $hover-selected-ui;
    }
  }
}

@include exports('data-table-v2-core') {
  @if feature-flag-enabled('components-x') {
    @include data-table-v2-core--x;
  } @else {
    @include data-table-v2-core;
  }
}

